# AoC

./: .gitignore
2023/cpp/: Makefile  aoc01.cpp  aoc02.cpp
2024/01/: CMakeLists.txt
2024/01/src/: main.cpp
2024/02/src/: main.cpp
2024/03/src/: main.cpp
2024/04/src/: main.cpp
2024/05/: CMakeLists.txt
2024/05/src/: main.cpp
2024/06/src/: main.cpp
2024/07/: CMakeLists.txt
2024/07/src/: main.cpp
2024/08/src/: main.cpp
2024/09/: CMakeLists.txt
2024/09/src/: main.cpp
